--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -13,25 +13,25 @@
  */
 
 body {
---color-primary-100: #F8A9B9;
---color-primary-200: #F5889E;
---color-primary-300: #F26784;
---color-primary-400: #F04669;
---color-primary-500: #ED254E;
---color-primary-600: #DC123C;
---color-primary-700: #BB0F33;
---color-primary-800: #9A0D2A;
---color-primary-900: #790A21;
+--color-primary-100: #9BC4ED;
+--color-primary-200: #7DB2E8;
+--color-primary-300: #5FA1E3;
+--color-primary-400: #408FDD;
+--color-primary-500: #257DD4;
+--color-primary-600: #206BB6;
+--color-primary-700: #1B5998;
+--color-primary-800: #154779;
+--color-primary-900: #10365B;
 
---color-secondary-100: #F8A9B9;
---color-secondary-200: #F5889E;
---color-secondary-300: #F26784;
---color-secondary-400: #F04669;
---color-secondary-500: #ED254E;
---color-secondary-600: #DC123C;
---color-secondary-700: #BB0F33;
---color-secondary-800: #9A0D2A;
---color-secondary-900: #790A21;
+--color-secondary-100: #EFBF8F;
+--color-secondary-200: #EBAD70;
+--color-secondary-300: #E69C51;
+--color-secondary-400: #E28A32;
+--color-secondary-500: #D2781E;
+--color-secondary-600: #B36619;
+--color-secondary-700: #935415;
+--color-secondary-800: #744211;
+--color-secondary-900: #55300C;
 
 --color-bg-100: #696969;
 --color-bg-200: #5E5E5E;
