--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -12,49 +12,49 @@
  * primary, secondary: +7, -7
  */
 
-body {
---color-primary-100: #9BC4ED;
---color-primary-200: #7DB2E8;
---color-primary-300: #5FA1E3;
---color-primary-400: #408FDD;
---color-primary-500: #257DD4;
---color-primary-600: #206BB6;
---color-primary-700: #1B5998;
---color-primary-800: #154779;
---color-primary-900: #10365B;
+:root {
+    --color-primary-100: #9BC4ED;
+    --color-primary-200: #7DB2E8;
+    --color-primary-300: #5FA1E3;
+    --color-primary-400: #408FDD;
+    --color-primary-500: #257DD4;
+    --color-primary-600: #206BB6;
+    --color-primary-700: #1B5998;
+    --color-primary-800: #154779;
+    --color-primary-900: #10365B;
 
---color-secondary-100: #EFBF8F;
---color-secondary-200: #EBAD70;
---color-secondary-300: #E69C51;
---color-secondary-400: #E28A32;
---color-secondary-500: #D2781E;
---color-secondary-600: #B36619;
---color-secondary-700: #935415;
---color-secondary-800: #744211;
---color-secondary-900: #55300C;
+    --color-secondary-100: #EFBF8F;
+    --color-secondary-200: #EBAD70;
+    --color-secondary-300: #E69C51;
+    --color-secondary-400: #E28A32;
+    --color-secondary-500: #D2781E;
+    --color-secondary-600: #B36619;
+    --color-secondary-700: #935415;
+    --color-secondary-800: #744211;
+    --color-secondary-900: #55300C;
 
---color-bg-100: #696969;
---color-bg-200: #5E5E5E;
---color-bg-300: #545454;
---color-bg-400: #4A4A4A;
---color-bg-500: #404040;
---color-bg-600: #363636;
---color-bg-700: #2B2B2B;
---color-bg-800: #212121;
---color-bg-900: #171717;
+    --color-bg-100: #696969;
+    --color-bg-200: #5E5E5E;
+    --color-bg-300: #545454;
+    --color-bg-400: #4A4A4A;
+    --color-bg-500: #404040;
+    --color-bg-600: #363636;
+    --color-bg-700: #2B2B2B;
+    --color-bg-800: #212121;
+    --color-bg-900: #171717;
 
---color-fg-100: #FFFFFF;
---color-fg-200: #F5F5F5;
---color-fg-300: #EBEBEB;
---color-fg-400: #E0E0E0;
---color-fg-500: #D6D6D6;
---color-fg-600: #C4C4C4;
---color-fg-700: #B3B3B3;
---color-fg-800: #A1A1A1;
---color-fg-900: #8F8F8F;
+    --color-fg-100: #FFFFFF;
+    --color-fg-200: #F5F5F5;
+    --color-fg-300: #EBEBEB;
+    --color-fg-400: #E0E0E0;
+    --color-fg-500: #D6D6D6;
+    --color-fg-600: #C4C4C4;
+    --color-fg-700: #B3B3B3;
+    --color-fg-800: #A1A1A1;
+    --color-fg-900: #8F8F8F;
 
---color-text: var(--color-fg-500);
---color-text-dimmed: var(--color-fg-900);
+    --color-text: var(--color-fg-500);
+    --color-text-dimmed: var(--color-fg-900);
 
---font-default: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    --font-default: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
